# selkies-rust

./: Cargo.toml  README.md
crates/selkies-bin/: Cargo.toml
crates/selkies-bin/src/: main.rs
crates/selkies-core/: Cargo.toml
crates/selkies-core/src/: error.rs  lib.rs  messages.rs  sdp.rs  signaling_proto.rs
crates/selkies-core/src/oracle/: differ.rs  mod.rs  recorder.rs
crates/selkies-input/: Cargo.toml
crates/selkies-input/src/: gamepad.rs  lib.rs
crates/selkies-pipeline/: Cargo.toml
crates/selkies-pipeline/src/: lib.rs
crates/selkies-signaling/: Cargo.toml
crates/selkies-signaling/src/: client.rs  lib.rs
crates/selkies-stats/: Cargo.toml
crates/selkies-stats/src/: lib.rs
