[workspace]
resolver = "2"
members = [
    "crates/selkies-core",
    "crates/selkies-signaling",
    "crates/selkies-pipeline",
    "crates/selkies-input",
    "crates/selkies-stats",
    "crates/selkies-bin",
]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto (HMAC for TURN)
hmac = "0.12"
sha1 = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Linux kernel interfaces (uinput, ioctl, epoll)
libc = "0.2"

# GStreamer (1.28 / gstreamer-rs 0.23)
gstreamer       = { version = "0.23", features = ["v1_28"] }
gstreamer-video = { version = "0.23", features = ["v1_28"] }
gstreamer-webrtc = { version = "0.23" }
gstreamer-sdp   = { version = "0.23" }
gstreamer-rtp   = { version = "0.23" }
