[package]
name = "selkies-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
selkies-core = { path = "../selkies-core" }
selkies-stats = { path = "../selkies-stats" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
gstreamer        = { workspace = true }
gstreamer-video  = { workspace = true }
gstreamer-webrtc = { workspace = true }
gstreamer-sdp    = { workspace = true }
gstreamer-rtp    = { workspace = true }
