[package]
name = "selkies-signaling"
version = "0.1.0"
edition = "2021"

[dependencies]
selkies-core = { path = "../selkies-core" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
