[package]
name = "selkies-signaling"
version = "0.1.0"
edition = "2021"

[dependencies]
selkies-core = { path = "../selkies-core" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
http = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
